--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,41 @@ h3 {
   font-size: 24px;
 }
 
+.navbar {
+  padding: 0 12px;
+}
+.navbar__container {
+  max-width: 1140px;
+  margin: 0 auto;
+  padding: 30px 0 120px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbar__logo {
+  font-size: 32px;
+  font-weight: 800;
+}
+.navbar ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+.navbar li {
+  margin-right: 30px;
+}
+.navbar li:last-child {
+  margin-right: 0;
+}
+.navbar a {
+  text-decoration: none;
+  color: rgb(41, 120, 181);
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
 .about {
   text-align: center;
 }
