--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -6,6 +6,10 @@
   line-height: 1;
 }
 
+#root {
+  min-height: 100vh;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
   color: rgb(68, 68, 68);
