Added dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -13,8 +13,13 @@ body {
 
 section {
   max-width: 1140px;
-  padding: 0 12px;
-  margin: 0 auto 120px;
+  padding: 0 12px 120px 12px;
+  margin: 0 auto;
+}
+
+.dark {
+  background:rgb(68, 68, 68);
+  color: white;
 }
 
 h1 {
