--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -6,9 +6,13 @@
   line-height: 1;
 }
 
+#root {
+  min-height: 100vh;
+}
+
 body {
   font-family: 'Poppins', sans-serif;
-  color: rgb(68, 68, 68);
+  color: $secondaryColor;
 }
 
 section {
@@ -18,7 +22,7 @@ section {
 }
 
 .dark {
-  background: rgb(68, 68, 68);
+  background: $secondaryColor !important;
   color: white;
 }
 
