--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -1,10 +1,15 @@
 .navbar {
   padding: 0 12px;
+  margin-bottom: 90px;
+  background: white;
+  border-bottom: 1px solid $primaryColor;
+  position: sticky;
+  top: 0;
 
   &__container {
     max-width: 1140px;
     margin: 0 auto;
-    padding: 30px 0 120px;
+    padding: 30px 0 30px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -33,7 +38,7 @@
 
   a {
     text-decoration: none;
-    color: rgb(41, 120, 181);
+    color: $primaryColor;
     font-weight: 600;
     text-transform: uppercase;
   }
