--- a/src/scss/_projects.scss
+++ b/src/scss/_projects.scss
@@ -12,7 +12,7 @@
   }
 
   &__item {
-    border: 1px solid rgb(41, 120, 181);
+    border: 1px solid $primaryColor;
     padding: 10px;
     box-shadow: 2px 2px 2px #ccc;
   }
