--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,5 +1,8 @@
+@import './colors';
 @import './global';
 @import './about';
 @import './contacts';
 @import './navbar';
 @import './projects';
+@import './blog';
+@import './card';
